# MailForge-Pro

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/: __init__.py  campaign_engine.py  config.py  contact_manager.py  main.py  stats_tracker.py  template_engine.py  tui_dashboard.py  utils.py
templates/: sample_contacts.csv  welcome.html
tests/: test_mailforge.py
